--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nasa-fe",
+  "homepage": "https://vikrant111.github.io/portfolio",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
@@ -8,14 +9,16 @@
     "@mui/material": "^5.13.0",
     "arwes": "^1.0.0-alpha.5",
     "file-saver": "^2.0.5",
+    "gh-pages": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.0",
     "typewriter-effect": "^2.19.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
