--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nasa-fe",
-  "homepage": "https://vikrant111.github.io/portfolio",
+  "homepage": "https://vikrant111.github.io/myportfolio",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
